--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
 //        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3' // Add this line
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
 
