--- a/.gitignore
+++ b/.gitignore
@@ -34,27 +34,7 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
+.idea/
 
 # Keystore files
 *.jks
-
-.idea/gradle.xml
-
-.idea/gradle.xml
-
-.idea/libraries/animated_vector_drawable_23_4_0.xml
-
-.idea/libraries/appcompat_v7_23_4_0.xml
-
-.idea/libraries/hamcrest_core_1_3.xml
-
-.idea/gradle.xml
-
-.idea
-
-.idea/.name
-
-.idea/.name
-
-.idea/.name
